Add elevator advice to attendance page

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -28,6 +28,13 @@
     Center](https://illinicenter.illinois.edu/), located on the 19th Floor of
     200 South Wacker Drive.
 
+    **Note:** To go between the fourth and the 19th floor, you can either:
+
+    - Go to the 16th floor and walk around the corner 
+      in the elevator lobby to the other elevator bank.
+    - Go to the ground floor and do the same. This may be quicker during high-traffic
+      periods.
+
     <a id="registration"></a>
 
     ## Registration
