Elevator phrasing fix

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -31,7 +31,7 @@
     **Note:** To go between the fourth and the 19th floor, you can either:
 
     - Go to the 16th floor and walk around the corner 
-      in the elevator lobby to the other elevator bank.
+      in the elevator lobby to access the other elevator bank.
     - Go to the ground floor and do the same. This may be quicker during high-traffic
       periods.
 
