Add improved arrival and elevator info

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -28,7 +28,26 @@
     Center](https://illinicenter.illinois.edu/), located on the 19th Floor of
     200 South Wacker Drive.
 
-    **Note:** To go between the fourth and the 19th floor, you can either:
+    <a id="arrival"></a>
+
+    ### Arrival
+
+    200 S. Wacker has building security on the ground floor. Clearing
+    security may take some time, especially during periods of high demand.
+    Please allow some extra time to avoid having to rush.
+
+    Upon arrival, tell them that you are there for PACT 2022, and they should
+    let you through. They also have the names of all registrants on file.  In
+    case of trouble, call 401-497-9385.
+
+    <a id="elevator-banks"></a>
+
+    ### Transit between DPI and IC
+
+    200 S. Wacker does **not** have any elevators that go *directly* between
+    the fourth floor (DPI) and the 19th floor (Illini Center).
+
+    To go between the fourth and the 19th floor, you can either:
 
     - Go to the 16th floor and walk around the corner 
       in the elevator lobby to access the other elevator bank.
