Add arrival news item

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,6 +41,10 @@
   {% filter markdown %}
     # News
 
+    * **October 8, 2022** **PACT 2022 is here!** Tutorials start today at 2:15pm
+      (*note the change* compared to earlier versions of the posted program).
+      Please see [our attendance page](attend.html#arrival) for important
+      **arrival information**.
     * **September 24, 2022** Applications for [Student Travel Awards](attend.html#travel-awards)
       are now available.
     * **September 12, 2022** The [technical program](program.html)
