--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,7 @@
     # News
 
     * **October 8, 2022** **PACT 2022 is here!** Tutorials start today at 2:15pm
-      (*note the change* compared to earlier versions of the posted program).
+      (*note the change* compared to earlier versions of the [posted program](tutorials.html)).
       Please see [our attendance page](attend.html#arrival) for important
       **arrival information**.
     * **September 24, 2022** Applications for [Student Travel Awards](attend.html#travel-awards)
