Fix arrival phrasing

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -33,8 +33,8 @@
     ### Arrival
 
     200 S. Wacker has **building security on the ground floor**. Clearing
-    security may take some time, especially during high-traffic periods.
-    Please allow some extra time to avoid having to rush.
+    security may take time, especially during high-traffic periods.
+    Please arrive early to avoid having to rush.
 
     Upon arrival, **tell them that you are there for PACT 2022**, and they should
     let you through. They also have the names of all registrants on file.  In
