Slide upload: no subfolders

--- a/pages/slides-upload.html
+++ b/pages/slides-upload.html
@@ -6,10 +6,9 @@
 
     Dear Presenter,
 
-    To prevent technical difficulties during your presentation:
-    If you are able, please upload your slides to the
-    subfolder of [this file share](https://ssl.tiker.net/nextcloud/s/rRidmSnWY2LHCxx)
-    corresponding to your session.
+    To prevent technical difficulties during your presentation: If you are
+    able, please upload your slides to [this file
+    share](https://ssl.tiker.net/nextcloud/s/rRidmSnWY2LHCxx).
 
     Thank you!
   {% endfilter %}
