Explain weekend elevator situation

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -6,8 +6,8 @@
 
     What's on this page:
 
-    - [Registration](#registration)
     - [Venue](#venue)
+    - [Registration](#registration)
     - [Hotels](#hotels)
     - [Travel Awards](#travel-awards)
     - [Area Restaurants](#restaurants)
@@ -42,7 +42,28 @@
 
     <a id="elevator-banks"></a>
 
-    ### Transit between DPI and IC
+    ### Transit between DPI and IC (Weekend)
+
+    200 S. Wacker does **not** have any elevators that go *directly* between
+    the fourth floor (DPI) and the 19th floor (Illini Center).
+
+    To go between the fourth and the 19th floor:
+
+    - Go to the ground floor.
+    - To go to DPI (fourth floor), find and use **Car 1**. It should be open
+      and waiting in the lobby. (If it is not, please contact building security.
+      They can order the car back to the ground floor.)
+    - To go to the Illini Center (19th floor), find and use **Car 7**. It
+      should be open and waiting in the lobby. (If it is not, please contact
+      building security.  They can order the car back to the ground floor.)
+    - Once you have reached your destination floor, please **press G** to
+      send the elevator back to the lobby. Please **make sure the elevator
+      is actually returning** (additional signals from the door sensor may prevent
+      it from doing so).
+
+    We also have signage posted to help you find your way.
+
+    ### Transit between DPI and IC (Weekday)
 
     200 S. Wacker does **not** have any elevators that go *directly* between
     the fourth floor (DPI) and the 19th floor (Illini Center).
