Add marathon info

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -32,6 +32,17 @@
 
     ### Arrival
 
+    The **Chicago Marathon** takes place on **Sunday October 9**, which may make travel
+    to travel to the conference venue less convenient. Please allow additional
+    time.  The marathon starts at 7:30am in Grant Park near Lake Michigan. The
+    course comes close to 200 S. Wacker for the first time on LaSalle St.,
+    where the main participant field is expected at 7:40am. It returns to
+    within a block of the conference venue at Wacker and Monroe, where the open
+    participant field is expected at 8:40am. Wacker Dr. north of
+    Monroe St. (one block north) will remain closed until about
+    1:15pm. According to current planning, Wacker Dr. near the
+    venue will remain open.
+
     200 S. Wacker has **building security on the ground floor**. Clearing
     security may take time, especially during high-traffic periods.
     Please arrive early to avoid having to rush.
@@ -42,7 +53,7 @@
 
     <a id="elevator-banks"></a>
 
-    ### Transit between DPI and IC (Weekend)
+    ### Transit between DPI and Illini Center (Weekend)
 
     200 S. Wacker does **not** have any elevators that go *directly* between
     the fourth floor (DPI) and the 19th floor (Illini Center).
@@ -63,7 +74,7 @@
 
     We also have signage posted to help you find your way.
 
-    ### Transit between DPI and IC (Weekday)
+    ### Transit between DPI and Illini Center (Weekday)
 
     200 S. Wacker does **not** have any elevators that go *directly* between
     the fourth floor (DPI) and the 19th floor (Illini Center).
