--- a/pages/index.html
+++ b/pages/index.html
@@ -41,6 +41,8 @@
   {% filter markdown %}
     # News
 
+    * **October 9, 2022** Please see our [arrival information page](attend.html#arrival)
+      for important information on the Chicago Marathon as it pertains to PACT.
     * **October 8, 2022** **PACT 2022 is here!** Tutorials start today at 2:15pm
       (*note the change* compared to earlier versions of the [posted program](tutorials.html)).
       Please see [our attendance page](attend.html#arrival) for important
