Better slide upload instructions

--- a/pages/slides-upload.html
+++ b/pages/slides-upload.html
@@ -10,6 +10,23 @@
     able, please upload your slides to [this file
     share](https://ssl.tiker.net/nextcloud/s/rRidmSnWY2LHCxx).
 
+    **IMPORTANT:** Please name your files according to the pattern
+    `oct10-1330-name-title.pdf`, that is `DATE-TIME-PRESENTER-TITLE.pdf`,
+    to help us put them in the correct place more efficiently.
+
     Thank you!
+
+    **Note:**
+
+    - It is **strongly recommended** that you use this if your session takes place
+      in the DPI Discovery room.
+
+    - You **may use this** if your session takes place in another classroom at DPI.
+
+    - If your session takes place in the Illini Center ("IC"), uploading your
+      slides here **will not be useful**, as we do not have a house computer available
+      in that room.
+
+    Please check the [program](program.html) to see where your session takes place.
   {% endfilter %}
 {% endblock %}
