--- a/pages/index.html
+++ b/pages/index.html
@@ -28,6 +28,14 @@
       are an important theme of the conference.
       </p>
 
+      <p>
+        <b>PACT going by too quickly?
+          <a href="https://publish.illinois.edu/lcpc2022atillinois">
+            LCPC 2022
+          </a> takes place immediately afterwards at the Illini Center.
+        </b>
+      </p>
+
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
         <a href="attend.html" class="btn btn-primary btn-lg px-4 me-md-2">Register Now &raquo;</a>
