Announce paper downloads

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,13 +28,21 @@
       are an important theme of the conference.
       </p>
 
-      <p>
-        <b>PACT going by too quickly?
-          <a href="https://publish.illinois.edu/lcpc2022atillinois">
-            LCPC 2022
-          </a> takes place immediately afterwards at the Illini Center.
-        </b>
-      </p>
+      <ul>
+        <li>
+          <b>PACT going by too quickly?
+            <a href="https://publish.illinois.edu/lcpc2022atillinois">
+              LCPC 2022
+            </a> takes place immediately afterwards at the Illini Center.
+          </b>
+        </li>
+        <li>
+          <b>Paper downloads are now
+            <a href="https://ssl.tiker.net/nextcloud/s/SRTCfZyD4g9zoiA">
+              available</a>. You will need a password that is posted throughout DPI.
+          </b>
+        </li>
+      </ul>
 
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
@@ -49,6 +57,10 @@
   {% filter markdown %}
     # News
 
+    * **October 10, 2022** PACT 2022 papers are now available for
+      [download](https://ssl.tiker.net/nextcloud/s/SRTCfZyD4g9zoiA).
+      To access the papers repository, you will need a password that is
+      posted throughout the venue.
     * **October 9, 2022** Please see our [arrival information page](attend.html#arrival)
       for important information on the Chicago Marathon as it pertains to PACT.
     * **October 8, 2022** **PACT 2022 is here!** Tutorials start today at 2:15pm
