Declutter attendance page and update elevator advice

--- a/pages/attend.html
+++ b/pages/attend.html
@@ -32,17 +32,6 @@
 
     ### Arrival
 
-    The **Chicago Marathon** takes place on **Sunday October 9**, which may make travel
-    to travel to the conference venue less convenient. Please allow additional
-    time.  The marathon starts at 7:30am in Grant Park near Lake Michigan. The
-    course comes close to 200 S. Wacker for the first time on LaSalle St.,
-    where the main participant field is expected at 7:40am. It returns to
-    within a block of the conference venue at Wacker and Monroe, where the open
-    participant field is expected at 8:40am. Wacker Dr. north of
-    Monroe St. (one block north) will remain closed until about
-    1:15pm. According to current planning, Wacker Dr. near the
-    venue will remain open.
-
     200 S. Wacker has **building security on the ground floor**. Clearing
     security may take time, especially during high-traffic periods.
     Please arrive early to avoid having to rush.
@@ -53,38 +42,14 @@
 
     <a id="elevator-banks"></a>
 
-    ### Transit between DPI and Illini Center (Weekend)
-
-    200 S. Wacker does **not** have any elevators that go *directly* between
-    the fourth floor (DPI) and the 19th floor (Illini Center).
-
-    To go between the fourth and the 19th floor:
-
-    - Go to the ground floor.
-    - To go to DPI (fourth floor), find and use **Car 1**. It should be open
-      and waiting in the lobby. (If it is not, please contact building security.
-      They can order the car back to the ground floor.)
-    - To go to the Illini Center (19th floor), find and use **Car 7**. It
-      should be open and waiting in the lobby. (If it is not, please contact
-      building security.  They can order the car back to the ground floor.)
-    - Once you have reached your destination floor, please **press G** to
-      send the elevator back to the lobby. Please **make sure the elevator
-      is actually returning** (additional signals from the door sensor may prevent
-      it from doing so).
-
-    We also have signage posted to help you find your way.
-
     ### Transit between DPI and Illini Center (Weekday)
 
     200 S. Wacker does **not** have any elevators that go *directly* between
     the fourth floor (DPI) and the 19th floor (Illini Center).
 
-    To go between the fourth and the 19th floor, you can either:
-
-    - Go to the 16th floor and walk around the corner 
-      in the elevator lobby to access the other elevator bank.
-    - Go to the ground floor and do the same. This may be quicker during high-traffic
-      periods.
+    To go between the fourth and the 19th floor, you should go to the ground
+    floor and walk around the corner in the elevator lobby to access the other
+    elevator bank. (Please **no longer** use the 16th floor to change.)
 
     <a id="registration"></a>
 
