Add best paper committee

--- a/pages/organization.html
+++ b/pages/organization.html
@@ -105,8 +105,22 @@
     - Yongshan Ding, Yale University
     - Zehra Sura, Bloomberg
 
+    <a id="best-paper-committee"></a>
+
+    ## Best Paper Selection Committee
+
+    - Jose Cano, University of Glasgow
+    - Sushant Kondguli, Meta
+    - Jose Moreira, IBM
+    - Antonino Tumeo, Pacific Northwest National Laboratory
+
+    {#
+
     ## Artifact Evaluation Committee
 
     (TBA)
+
+    #}
+
   {% endfilter %}
 {% endblock %}
