Update front page hero text

--- a/pages/index.html
+++ b/pages/index.html
@@ -30,16 +30,9 @@
 
       <ul>
         <li>
-          <b>PACT going by too quickly?
-            <a href="https://publish.illinois.edu/lcpc2022atillinois">
-              LCPC 2022
-            </a> takes place immediately afterwards at the Illini Center.
-          </b>
-        </li>
-        <li>
           <b>Paper downloads are now
             <a href="https://ssl.tiker.net/nextcloud/s/SRTCfZyD4g9zoiA">
-              available</a>. You will need a password that is posted throughout DPI.
+              available</a>. (Password required)
           </b>
         </li>
       </ul>
