--- a/pages/index.html
+++ b/pages/index.html
@@ -50,9 +50,28 @@
   {% filter markdown %}
     # News
 
+    *   **October 16, 2022** And that's a wrap! PACT 2022 concluded on Wednesday.
+        We hope you enjoyed the conference.
+
+        As part of PACT 2022, the following contributions received awards:
+
+        -   **Best Paper:** Slice-and-Forge: Making Better Use of Caches for Graph
+            Convolutional Network Accelerators  (#520) *M. Yoo, J. Song, H. Lee, J. Lee, N. Kim, Y. Kim, J.  Lee*
+            (selected by the [best paper selection committee](organization.html#best-paper-committee))
+        -   **ACM Student Research Competition (SRC), Graduate Division**:
+            -   **1st prize:** Automatically Translating Non-Affine Codes, *Avery Laird* (U. Toronto)
+            -   **2nd prize:** A GPU Acceleration Flow for Parallel RTL Simulation and Hardware Testing,
+                *Dian-Lun Lin* (U. Utah)
+            -   **3rd prize:** SuperB-NoC: A Superconducting Buffering NoC,
+                *Rhys Gretsch* (UC Santa Barbara)
+        -   **ACM Student Research Competition (SRC), Undergraduate Division**:
+            -   **1st prize:** Understanding Correlated Error Events in Quantum Computers,
+                *Arpan Gupta* (Rutgers U.)
+            -   **2nd prize:** Independent Tenancy Model, *Boyang Wang* (U. Rochester)
+
     *   **October 10, 2022** PACT 2022 papers are now available for
         [download](https://ssl.tiker.net/nextcloud/s/SRTCfZyD4g9zoiA).
-        To access the papers repository, you will need a password that is
+        To access the papers repository, you will need a password that was
         posted throughout the venue.
     *   **October 9, 2022** Please see our [arrival information page](attend.html#arrival)
         for important information on the Chicago Marathon as it pertains to PACT.
