Credit SRC committee on the front page

--- a/pages/index.html
+++ b/pages/index.html
@@ -59,6 +59,7 @@
             Convolutional Network Accelerators  (#520) *M. Yoo, J. Song, H. Lee, J. Lee, N. Kim, Y. Kim, J.  Lee*
             (selected by the [best paper selection committee](organization.html#best-paper-committee))
         -   **ACM Student Research Competition (SRC), Graduate Division**:
+            (selected by the [SRC committee](src.html#committee))
             -   **1st prize:** Automatically Translating Non-Affine Codes, *Avery Laird* (U. Toronto)
             -   **2nd prize:** A GPU Acceleration Flow for Parallel RTL Simulation and Hardware Testing,
                 *Dian-Lun Lin* (U. Utah)
