--- a/pages/src.html
+++ b/pages/src.html
@@ -122,6 +122,8 @@
       submission to other conferences or journals (as their rules permit).
 
 
+    <a id="committee"></a>
+
     ## Organization
 
     - **Chair:** Saugata Ghose (Univ. of Illinois Urbana-Champaign)
