Fix SRC committee credit

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,14 +58,15 @@
         -   **Best Paper:** Slice-and-Forge: Making Better Use of Caches for Graph
             Convolutional Network Accelerators  (#520) *M. Yoo, J. Song, H. Lee, J. Lee, N. Kim, Y. Kim, J.  Lee*
             (selected by the [best paper selection committee](organization.html#best-paper-committee))
-        -   **ACM Student Research Competition (SRC), Graduate Division**:
-            (selected by the [SRC committee](src.html#committee))
+        -   **ACM Student Research Competition (SRC), Graduate Division**
+            (selected by the [SRC committee](src.html#committee)):
             -   **1st prize:** Automatically Translating Non-Affine Codes, *Avery Laird* (U. Toronto)
             -   **2nd prize:** A GPU Acceleration Flow for Parallel RTL Simulation and Hardware Testing,
                 *Dian-Lun Lin* (U. Utah)
             -   **3rd prize:** SuperB-NoC: A Superconducting Buffering NoC,
                 *Rhys Gretsch* (UC Santa Barbara)
-        -   **ACM Student Research Competition (SRC), Undergraduate Division**:
+        -   **ACM Student Research Competition (SRC), Undergraduate Division**
+            (selected by the [SRC committee](src.html#committee)):
             -   **1st prize:** Understanding Correlated Error Events in Quantum Computers,
                 *Arpan Gupta* (Rutgers U.)
             -   **2nd prize:** Independent Tenancy Model, *Boyang Wang* (U. Rochester)
