Adding judges to SRC page

--- a/pages/src.html
+++ b/pages/src.html
@@ -144,6 +144,16 @@
         - Tyler Sorensen (Univ. of California, Santa Cruz)
         - Swamit Tannu (Univ. of Wisconsin–Madison)
         - Ana Lucia Varbanescu (Univ. of Amsterdam)
+    - **Competition Judges:**
+        - Nancy Amato (Univ. of Illinois Urbana-Champaign)
+        - Jongouk Choi (Univ. of Central Florida)
+        - Sayan Ghosh (Pacific Northwest Nat'l. Lab)
+        - Tsung-Wei Huang (Univ. of Utah)
+        - Gennady Pekhimenko (Univ. of Toronto)
+        - Tyler Sorensen (Univ. of California, Santa Cruz)
+        - Dingwen Tao (Indiana Univ. Bloomington)
+        - Antonino Tumeo (Pacific Northwest Nat'l. Lab)
+        - Nandita Vijaykumar (Univ. of Toronto)
 
   {% endfilter %}
 {% endblock %}
