Link judges from front page

--- a/pages/src.html
+++ b/pages/src.html
@@ -126,34 +126,40 @@
 
     ## Organization
 
-    - **Chair:** Saugata Ghose (Univ. of Illinois Urbana-Champaign)
-    - **Selection Committee:**
-        - Shoaib Akram (Australian National Univ.)
-        - Ramnatthan Alagappan (Univ. of Illinois Urbana-Champaign)
-        - Rachata Ausavarungnirun (King Mongkut's Univ. of Technology North Bangkok)
-        - Shuang Chen (Huawei)
-        - Jongouk Choi (Univ. of Central Florida)
-        - Udit Gupta (Harvard Univ.)
-        - Mark Jeffrey (Univ. of Toronto)
-        - Tze Meng Low (Carnegie Mellon Univ.)
-        - Kiwan Maeng (Meta AI; Pennsylvania State Univ.)
-        - Hoda Naghibijouybari (Binghamton Univ.)
-        - Elaheh Sadredini (Univ. of California, Riverside)
-        - Gururaj Saileshwar (NVIDIA Research)
-        - Muhammad Shahbaz (Purdue Univ.)
-        - Tyler Sorensen (Univ. of California, Santa Cruz)
-        - Swamit Tannu (Univ. of Wisconsin–Madison)
-        - Ana Lucia Varbanescu (Univ. of Amsterdam)
-    - **Competition Judges:**
-        - Nancy Amato (Univ. of Illinois Urbana-Champaign)
-        - Jongouk Choi (Univ. of Central Florida)
-        - Sayan Ghosh (Pacific Northwest Nat'l. Lab)
-        - Tsung-Wei Huang (Univ. of Utah)
-        - Gennady Pekhimenko (Univ. of Toronto)
-        - Tyler Sorensen (Univ. of California, Santa Cruz)
-        - Dingwen Tao (Indiana Univ. Bloomington)
-        - Antonino Tumeo (Pacific Northwest Nat'l. Lab)
-        - Nandita Vijaykumar (Univ. of Toronto)
+    **Chair:** Saugata Ghose (Univ. of Illinois Urbana-Champaign)
+
+    ### Selection Committee
+
+    - Shoaib Akram (Australian National Univ.)
+    - Ramnatthan Alagappan (Univ. of Illinois Urbana-Champaign)
+    - Rachata Ausavarungnirun (King Mongkut's Univ. of Technology North Bangkok)
+    - Shuang Chen (Huawei)
+    - Jongouk Choi (Univ. of Central Florida)
+    - Udit Gupta (Harvard Univ.)
+    - Mark Jeffrey (Univ. of Toronto)
+    - Tze Meng Low (Carnegie Mellon Univ.)
+    - Kiwan Maeng (Meta AI; Pennsylvania State Univ.)
+    - Hoda Naghibijouybari (Binghamton Univ.)
+    - Elaheh Sadredini (Univ. of California, Riverside)
+    - Gururaj Saileshwar (NVIDIA Research)
+    - Muhammad Shahbaz (Purdue Univ.)
+    - Tyler Sorensen (Univ. of California, Santa Cruz)
+    - Swamit Tannu (Univ. of Wisconsin–Madison)
+    - Ana Lucia Varbanescu (Univ. of Amsterdam)
+
+    <a id="judges"></a>
+
+    ### Competition Judges
+
+    - Nancy Amato (Univ. of Illinois Urbana-Champaign)
+    - Jongouk Choi (Univ. of Central Florida)
+    - Sayan Ghosh (Pacific Northwest Nat'l. Lab)
+    - Tsung-Wei Huang (Univ. of Utah)
+    - Gennady Pekhimenko (Univ. of Toronto)
+    - Tyler Sorensen (Univ. of California, Santa Cruz)
+    - Dingwen Tao (Indiana Univ. Bloomington)
+    - Antonino Tumeo (Pacific Northwest Nat'l. Lab)
+    - Nandita Vijaykumar (Univ. of Toronto)
 
   {% endfilter %}
 {% endblock %}
