Add SYCL subtalks

--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -159,6 +159,16 @@
     SYCL, we hope that the tutorial will be interesting and valuable to your
     work.
 
+    A number of talks were presented as part of this tutorial:
+
+    - **SYCL Future Codesign with RISC-V, HPC, and AI.**  *Michael Wong*, Intel
+    - **Utilizing SYCL for Math Libraries − Lessons from Tasmanian and heFFTe.**
+      *Miroslav Stoyanov*, Oak Ridge National Lab
+    - **Experimental Study of SYCL Graph and Performance Portability.**
+      *Tsung-Wei Huang*, University of Utah
+    - **MDSPAN - A Deep Dive Spanning C++, SYCL & Kokkos**
+      *Nevin Liber*, Argonne National Lab
+
     <a id="tut1-3"></a>
 
     ##### Tutorial: COMET: A Domain-Specific Compilation of High-Performance Computational Chemistry
