Announce proceedings availability

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,15 +28,6 @@
       are an important theme of the conference.
       </p>
 
-      <ul>
-        <li>
-          <b>Paper downloads are now
-            <a href="https://ssl.tiker.net/nextcloud/s/JymaLdaWcaJYtPK">
-              available</a>. (Password required)
-          </b>
-        </li>
-      </ul>
-
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         {# <a href="https://pact22.hotcrp.com/" class="btn btn-secondary btn-lg px-4 me-md-2">Submit a Paper</a> #}
         <a href="attend.html" class="btn btn-primary btn-lg px-4 me-md-2">Register Now &raquo;</a>
@@ -50,6 +41,8 @@
   {% filter markdown %}
     # News
 
+    *   **January 27, 2023** [PACT 2022 Proceedings](https://dl.acm.org/doi/proceedings/10.1145/3559009)
+        are now available on the ACM digital library.
     *   **October 16, 2022** And that's a wrap! PACT 2022 concluded on Wednesday.
         We hope you enjoyed the conference.
 
@@ -73,10 +66,6 @@
                 *Arpan Gupta* (Rutgers U.)
             -   **2nd prize:** Independent Tenancy Model, *Boyang Wang* (U. Rochester)
 
-    *   **October 10, 2022** PACT 2022 papers are now available for
-        [download](https://ssl.tiker.net/nextcloud/s/JymaLdaWcaJYtPK).
-        To access the papers repository, you will need a password that was
-        posted throughout the venue.
     *   **October 9, 2022** Please see our [arrival information page](attend.html#arrival)
         for important information on the Chicago Marathon as it pertains to PACT.
     *   **October 8, 2022** **PACT 2022 is here!** Tutorials start today at 2:15pm
